2.4.0
-----
1. Add 'Read offset' setting for AudioCDs.
2. Show invalid files in playlists using red text.
3. Add 'Remove Invalid Tracks' to playlist context menu.
4. Allow OPML URLs in podcast add URL dialog.
5. Allow to read local RSS/OPML files in podcast search dialog.

2.3.3
-----
1. For Opus files, use R128_TRACK_GAIN and R128_ALBUM_GAIN to store replaygain
   values.
2. Remove user-agent checking when serving local files, this is easily
   fake-able and breaks playback to forked-daap (and mopidy?)
3. Add '.opus' to list of recognised extensions for local files.
4. Initialise network proxy factory when starting.
5. If artist, album, and title are empty in replaygain dialog, then show
   filename in title column.
6. Opus does not use replaygain peak tags, so do not write.
7. Use same 'album key' for all discs in an album, so that playqueue groups
   them together, and shuffle by albums keeps them together.
8. Remove confirmation dialog when saving replaygain tags.
9. Fix saving 'Descending' order for smart playlists.

2.3.2
-----
 1. Store actual song path for local files (mainly affects windows)
 2. When using Track Organizer to rename music tracks, rename any other files
    that have the same basename as the music file.
 3. Install cantata.png to use as Windows tray icon.
 4. Remove internal Samba share mounting code, this had some privilege
    escalation issues, and is not well tested.
 5. Use 32-bit unsigned int to store output IDs.
 6. When marking podcast episodes for download, and 'show only uplayed' is
    checked, then only download unplayed episodes.
 7. Fix smart playlists with a rating range and no song include/exclude rules.
 8. Enable proxy config settings page by default.
 9. Add Brazilian Portuguese translation - thanks to Wanderson Gonçalves Pereira
10. Fix 'Locate In Library / Album' for albums with musicbrainz ID.
11. Check HTTP stream URLs are valid URLs, and scheme starts with http.